--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </script>
     <div>
         <nav class="navbar">
-            <a href="index (2).html" class="nav-logo">GROUP 31</a>
+            <a href="#" class="nav-logo"><img src="assets/barber.jpg" alt="logo" style="width:50px;height: 50px;" title="logo"></a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#staff">Staffs</a></li>
