--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li><a href="#staff">Staffs</a></li>
                 <li><a href="#message">Services offered</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="index2.html">images</a></li>
             </ul>
         </nav>
     </div>
