--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,9 @@
             border: 1px solid #ccc;
             float: left;
             width: 180px;
-            padding-top: 150px;
+            padding-top: 50px;
+            padding-left: 50px;
+        
         }
 
         div.gallery:hover {
@@ -47,48 +49,61 @@
         <a id="about1" href="index.html">HOME</a> &nbsp;
     </nav>
     <div class="gallery">
-        <a target="_blank" href="pictures/mount.jpg">
-            <img src="pictures/mount.jpg" alt="Cinque Terre" width="600" height="400">
+        <a target="_blank" href="assets/one.webp">
+            <img src="assets/one.webp" alt="Teeny Weeny Afro" width="180px" height="400px">
         </a>
-        <div class="desc"> a description of the image here</div>
+        <div class="desc"> The “TWA” – short for “Teeny Weeny Afro” – is a smaller version of the typical afro. In case you don’t mind an extra
+        short length, this proves to be a much more manageable haircut.<br>CHARGES = Kshs 500/=</div>
     </div>
 
     <div class="gallery">
-        <a target="_blank" href="pictures/land.jpeg">
-            <img src="pictures/land.jpeg" alt="Forest" width="600" height="400">
+        <a target="_blank" href="assets/one.webp">
+            <img src="assets/one.webp" alt="Teeny Weeny Afro" width="200px" height="400px">
         </a>
-        <div class="desc"> a description of the image here</div>
+        <div class="desc"> The “TWA” – short for “Teeny Weeny Afro” – is a smaller version of the typical afro. In case you
+            don’t mind an extra
+            short length, this proves to be a much more manageable haircut.<br>CHARGES = Kshs 500/=</div>
     </div>
 
     <div class="gallery">
-        <a target="_blank" href="pictures/scape.jpeg">
-            <img src="pictures/scape.jpeg" alt="Mountains" width="600" height="400">
+        <a target="_blank" href="assets/one.webp">
+            <img src="assets/one.webp" alt="Teeny Weeny Afro" width="600px" height="400px">
         </a>
-        <div class="desc"> a description of the image here</div>
+        <div class="desc"> The “TWA” – short for “Teeny Weeny Afro” – is a smaller version of the typical afro. In case you
+            don’t mind an extra
+            short length, this proves to be a much more manageable haircut.<br>CHARGES = Kshs 500/=</div>
+    </div>
+<div class="gallery">
+    <a target="_blank" href="assets/one.webp">
+        <img src="assets/one.webp" alt="Teeny Weeny Afro" width="600px" height="400px">
+    </a>
+    <div class="desc"> The “TWA” – short for “Teeny Weeny Afro” – is a smaller version of the typical afro. In case you
+        don’t mind an extra
+        short length, this proves to be a much more manageable haircut.<br>CHARGES = Kshs 500/=</div>
+</div>
+    <div class="gallery">
+        <a target="_blank" href="assets/one.webp">
+            <img src="assets/one.webp" alt="Teeny Weeny Afro" width="600px" height="400px">
+        </a>
+        <div class="desc"> The “TWA” – short for “Teeny Weeny Afro” – is a smaller version of the typical afro. In case you
+            don’t mind an extra
+            short length, this proves to be a much more manageable haircut.<br>CHARGES = Kshs 500/=</div>
     </div>
     <div class="gallery">
-        <a target="_blank" href="pictures/land2.png">
-            <img src="pictures/land2.png" alt="Mountains" width="600" height="400">
+        <a target="_blank" href="assets/one.webp">
+            <img src="assets/one.webp" alt="Teeny Weeny Afro" width="600px" height="400px">
         </a>
-        <div class="desc"> a description of the image here</div>
+        <div class="desc"> The “TWA” – short for “Teeny Weeny Afro” – is a smaller version of the typical afro. In case you
+            don’t mind an extra
+            short length, this proves to be a much more manageable haircut.<br>CHARGES = Kshs 500/=</div>
     </div>
     <div class="gallery">
-        <a target="_blank" href="pictures/river.jpg">
-            <img src="pictures/river.jpg" alt="Mountains" width="600" height="400">
+        <a target="_blank" href="assets/one.webp">
+            <img src="assets/one.webp" alt="Teeny Weeny Afro" width="600px" height="400px">
         </a>
-        <div class="desc">a description of the image here</div>
-    </div>
-    <div class="gallery">
-        <a target="_blank" href="pictures/hiil.jpeg">
-            <img src="pictures/hiil.jpeg" alt="Northern Lights" width="600" height="400">
-        </a>
-        <div class="desc">a description of the image here</div>
-    </div>
-    <div class="gallery">
-        <a target="_blank" href="pictures/trees.jpeg">
-            <img src="pictures/trees.jpeg" alt="Northern Lights" width="600" height="400">
-        </a>
-        <div class="desc">a description of the image here</div>
+        <div class="desc"> The “TWA” – short for “Teeny Weeny Afro” – is a smaller version of the typical afro. In case you
+            don’t mind an extra
+            short length, this proves to be a much more manageable haircut.<br>CHARGES = Kshs 500/=</div>
     </div>
 
 
